--- a/SimpleServiceClient/packages.config
+++ b/SimpleServiceClient/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.0.0-beta002" targetFramework="net451" />
-  <package id="JRPC.Client" version="1.1.0" targetFramework="net451" />
-  <package id="JRPC.Core" version="1.1.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net451" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net451" />
+  <package id="JRPC.Client" version="2.0.2-beta" targetFramework="net451" />
+  <package id="JRPC.Core" version="2.0.2-beta" targetFramework="net451" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
+  <package id="NLog" version="4.5.0-rc04" targetFramework="net451" />
 </packages>
